--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "hexo",
-  "version": "2.5.2",
+  "name": "hexo-site",
+  "version": "2.8.2",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "hexo-renderer-ejs": "*",
+    "hexo-renderer-stylus": "*",
+    "hexo-renderer-marked": "*"
+  }
 }
