--- a/_config.yml
+++ b/_config.yml
@@ -1,40 +1,43 @@
 # Hexo Configuration
-## Docs: http://zespia.tw/hexo/docs/configuration.html
-## Source: https://github.com/tommy351/hexo/
+## Docs: http://hexo.io/docs/configuration.html
+## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Yonney's Blog
-subtitle: 越努力才会越幸运 	
-description: 
+title:  Yonney's Blog
+subtitle: 越努力才会越幸运   
+description:
 author: MiKi Yonney
 email: mikiyonney@gmail.com
 language: 
+timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://mikiyonney.github.io/
 root: /
 permalink: :year/:month/:day/:title/
-tag_dir: tags
-archive_dir: archives
-category_dir: categories
-code_dir: downloads/code
+permalink_defaults:
 
 # Directory
 source_dir: source
 public_dir: public
+tag_dir: tags
+archive_dir: archives
+category_dir: categories
+code_dir: downloads/code
+i18n_dir: :lang
+skip_render:
 
 # Writing
 new_post_name: :title.md # File name of new posts
 default_layout: post
-auto_spacing: false # Add spaces between asian characters and western characters
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
-max_open_file: 100
-multi_thread: true
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
+relative_link: false
+future: true
 highlight:
   enable: true
   line_number: true
@@ -53,22 +56,14 @@ archive: 1
 category: 1
 tag: 1
 
-# Server
-## Hexo uses Connect as a server
-## You can customize the logger format as defined in
-## http://www.senchalabs.org/connect/logger.html
-port: 4000
-logger: false
-logger_format:
-
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
-date_format: MMM D YYYY
-time_format: H:mm:ss
+date_format: YYYY-MM-DD
+time_format: HH:mm:ss
 
-# Pagination 
+# Pagination
 ## Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
@@ -80,27 +75,13 @@ disqus_shortname: MiKiYonney
 plugins:
 - hexo-generator-feed
 
-
 # Extensions
-## Plugins: https://github.com/tommy351/hexo/wiki/Plugins
-## Themes: https://github.com/tommy351/hexo/wiki/Themes
+## Plugins: http://hexo.io/plugins/
+## Themes: http://hexo.io/themes/
 theme: hexo-theme-tyrant
-exclude_generator:
-
-# Markdown
-## https://github.com/chjj/marked
-markdown:
-  gfm: true
-  pedantic: false
-  sanitize: false
-  tables: true
-  breaks: true
-  smartLists: true
-  smartypants: true
 
 # Deployment
-## Docs: http://zespia.tw/hexo/docs/deployment.html
+## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type: github
   repository: git@github.com:MiKiYonney/mikiyonney.github.io.git
   branch: master
