--- a/_config.yml
+++ b/_config.yml
@@ -83,5 +83,6 @@ theme: hexo-theme-tyrant
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
+  type: git
   repository: git@github.com:MiKiYonney/mikiyonney.github.io.git
   branch: master
