--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,9 @@ subtitle: 越努力才会越幸运
 description:
 author: MiKi Yonney
 email: mikiyonney@gmail.com
-language: 
+language: zh-Hans
 timezone:
+# avatar: http://example.com/avtar.png
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
@@ -69,16 +70,15 @@ per_page: 10
 pagination_dir: page
 
 # Disqus 社会化评论disqus
-disqus_shortname: MiKiYonney
+# disqus_shortname: MiKiYonney
 
 #plugins
-plugins:
-- hexo-generator-feed
+plugins: hexo-generator-feed
 
 # Extensions
 ## Plugins: http://hexo.io/plugins/
 ## Themes: http://hexo.io/themes/
-theme: hexo-theme-tyrant
+theme: next
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
