--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ author: MiKi Yonney
 email: mikiyonney@gmail.com
 language: zh-Hans
 timezone:
-avatar: https://avatars2.githubusercontent.com/u/5563162?v=3&s=460
+avatar: /images/logo.jpeg
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
