--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -218,8 +218,10 @@ auto_excerpt:
   #qcode: /path/to/your/wechatqcode ex. /uploads/wechat-qcode.jpg
   #description: ex. subscribe to my blog by scanning my public wechat account
 
-
-
+#donate
+reward_comment: 你来了,就很好。我知道一般人是不会点的，但万一你奏不是一般人呢？
+wechatpay: /images/wechat_pay.jpg
+alipay: /images/alipay.png
 
 # ---------------------------------------------------------------
 # Third Party Services Settings
@@ -238,10 +240,10 @@ mathjax:
 #baidu_analytics:
 
 # Duoshuo ShortName
-#duoshuo_shortname:
+duoshuo_shortname: mikiyonney
 
 # Disqus
-#disqus_shortname:
+# disqus_shortname: MiKiYonney
 
 # Baidu Share
 # Available value:
