--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -26,9 +26,9 @@ rss:
 # When running the site in a subdirectory (e.g. domain.tld/blog), remove the leading slash (/archives -> archives)
 menu:
   home: /
-  #categories: /categories
-  #about: /about
-  archives: /archives
+  categories: /categories
+  # about: /about
+  # archives: /archives
   tags: /tags
   #commonweal: /404.html
 
