--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render: html/**
+skip_render: mywiki/**
 
 # Writing
 new_post_name: :title.md # File name of new posts
